рефакторинг + небольшие изменения ручек + логика создания вакансий
